--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "form5",
   "version": "0.1.0",
   "private": true,
+  "proxy": "https://zero-x-communications.trackdrive.com",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -9,14 +10,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.7.7",
+    "next": "14.2.16",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.16"
+    "react-dom": "^18"
   },
   "devDependencies": {
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
     "eslint": "^8",
-    "eslint-config-next": "14.2.16"
+    "eslint-config-next": "14.2.16",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1"
   }
 }
